@@ -287,6 +287,9 @@
 	Fixed weird character appearing on Ctrl+Space combination in command-line
 	mode.
 
+	Fixed :restart leaving histories disabled unless 'history' is set to a
+	non-default value in vifmrc.  Thanks to James Dietrich.
+
 0.13-beta to 0.13 (2023-04-04)
 
 	Made "withicase" and "withrcase" affect how files are sorted before
